--- a/Dockerfile.github
+++ b/Dockerfile.github
@@ -3,7 +3,7 @@ FROM ghcr.io/actions/actions-runner:2.304.0
 USER root
 
 # install curl, jq, node.js, git, and unzip
-RUN apt-get update && apt-get install -y curl jq nodejs git unzip && \
+RUN apt-get update && apt-get install -y curl jq nodejs git unzip azure-cli && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
